# Un-0

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff-base.toml
.github/workflows/: run_tests.yml
ablation_study/: README.md  lohe_sweep.sh  lr_sweep.sh  run_ablation.sh
scripts/: imagenet_preprocessing.py  precompute_dino_features.py
sky/: hello_world.yaml  lohe_b300x8_capacity_probe_fid50k.yaml  lohe_b300x8_smoke.yaml  lohe_latent_diversity_b300x8.yaml  lohe_spatial_b300x8_sweep.yaml
src/: common.py  data.py  eval.py  imagenet_data.py  inference.py  losses.py  metrics.py  model.py  train_cifar10.py  train_imagenet.py
tests/: test_data.py  test_decoupled_adamw.py  test_hf.py  test_imagenet_data.py  test_losses.py  test_metrics.py  test_model.py  test_queue.py  test_train_imagenet.py
un0/: __init__.py  common.py  decoupled_adamw.py  eval.py  inference.py  losses.py  metrics.py  model.py  train_cifar10.py  train_imagenet.py
